--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-
+<html> 
+<body bgcolor = "#111111">
+<font color = "#11AAFF">
 <marquee> sup dudes this is tirsod here i know close to nothing about html but at least i can make a marquee, yay, anyway guys check out my twitter @tweetsod and like instagram @artirsod hopefully you dont get any diseases from looking at anime girls</marquee>
 
 god this website sucks
