--- a/index.html
+++ b/index.html
@@ -8,4 +8,5 @@ god this website sucks
 
 <img src="https://cdn.discordapp.com/emojis/449040652932481034.png">
 
+this is under construction, come check it out later!
 </html>
