--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html> 
 <body bgcolor = "#111111">
+<body background="https://cdn.discordapp.com/attachments/376545554043502592/517564824461377539/background.gif">
 <font color = "#11AAFF">
 <marquee> sup dudes this is tirsod here i know close to nothing about html but at least i can make a marquee, yay, anyway guys check out my twitter @tweetsod and like instagram @artirsod hopefully you dont get any diseases from looking at anime girls</marquee>
 
