--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html> 
-<body bgcolor = "#111111">
-<body background="https://cdn.discordapp.com/attachments/376545554043502592/517564824461377539/background.gif">
-<font color = "#11AAFF">
-<marquee> sup dudes this is tirsod here i know close to nothing about html but at least i can make a marquee, yay, anyway guys check out my twitter @tweetsod and like instagram @artirsod hopefully you dont get any diseases from looking at anime girls</marquee>
+<body bgcolor = "#AA1111">
+<font color = "#FFFFFF">
+<center>
+<marquee>WELCOME TO MY WEBSITE!</marquee>
 
-god this website sucks
+<h1>THE OFFICIAL TOUCAN FAN CLUB WEBSITE</h1>
+<h3>(And the only one in the World Wide Web!!!)</h3>
 
-<img src="https://cdn.discordapp.com/emojis/449040652932481034.png">
+<a href="https://discord.gg/mJDAvZW"><img src="https://cdn.discordapp.com/emojis/517450483191775232.png?v=1"> </a>
 <br>
 <br>
+<img src ="https://web.archive.org/web/20090807121959im_/http://geocities.com/curt_sigurdsen/firebar.gif">
 
-this is under construction, come check it out later!
+<h3>May the mighty toucan bless your day!</h3>
+<h2>Thank you for visiting us!</h2>
+Send us your love emails to fans@toucanlove.com
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+tirsod made this abomination of a website, be sure to thank him
 </html>
