started full site

--- a/index.html
+++ b/index.html
@@ -1,38 +1,19 @@
 <!DOCTYPE html>
-<html> 
-<body bgcolor = "#AA1111">
-<font color = "#FFFFFF">
-<center>
-<marquee>WELCOME TO MY WEBSITE!</marquee>
+<html>
+<body bgcolor = "#000000" background = "https://cdn.discordapp.com/attachments/436366084954783754/517918092332892170/chaosrebornuncrustpng.png">
+<font face = "Segoe UI" color = "#FFFFFF">
+<left>
 
-<h1>THE OFFICIAL TOUCAN FAN CLUB WEBSITE</h1>
-<h3>(And the only one in the World Wide Web!!!)</h3>
-
-<a href="https://discord.gg/mJDAvZW"><img src="https://cdn.discordapp.com/emojis/517450483191775232.png?v=1"> </a>
-<br>
-<br>
-<img src ="https://web.archive.org/web/20090807121959im_/http://geocities.com/curt_sigurdsen/firebar.gif">
-
-<h3>May the mighty toucan bless your day!</h3>
-<h2>Thank you for visiting us!</h2>
-Send us your love emails to fans@toucanlove.com
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-tirsod made this abomination of a website, be sure to thank him
+<style>
+p.hell{
+	padding-left: 40%;
+    padding-top: 40%;
+}
+</style>
+<p class="hell">
+games <br>
+software <br>
+bgm <br>
+art <br>
+</p>
 </html>
