--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <!DOCTYPE html>
 <html>
-<body bgcolor = "#000000" background = "https://cdn.discordapp.com/attachments/436366084954783754/517918092332892170/chaosrebornuncrustpng.png">
+<body bgcolor = "#700000">
 <font face = "Segoe UI" color = "#FFFFFF">
 <left>
-
 <style>
-p.hell{
-	padding-left: 60%;
-    padding-top: 40%;
+div.hell{
+    position: absolute;
+    bottom: 5%;
+    left: 58%;
+}
+body {
+    background-image: url('https://cdn.discordapp.com/attachments/436366084954783754/517927344531308565/tirsod.png');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: 79% 140%;
+}
+div.option {
+    width: 100px;
+    text-indent: 0px;
+	transition: background 0.2s, text-indent 0.1s;
+}
+div.option:hover {
+	background: #000000;
+	text-indent: 8px;
 }
 </style>
-<p class="hell">
-games <br>
-software <br>
-bgm <br>
-art <br>
-</p>
+<div class = "hell">
+<div class = "option"> games  </div>
+<div class = "option"> software </div> 
+<div class = "option"> bgm </div>  
+<div class = "option"> art </div> 
+</div>
 </html>
