--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8">
+
+    <title>. . .</title>
+    <meta name="description" content="tirsod's special hell">
+    <meta name="author" content="tirsod & lilybeevee">
+</head>
+
+<link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
+
 <body bgcolor = "#700000">
 <font face = "Segoe UI" color = "#FFFFFF">
 <left>
 <style>
+a {
+    color: inherit;
+    text-decoration: none;
+}
 div.hell{
     position: absolute;
     bottom: 5%;
     left: 58%;
 }
 body {
-    background-image: url('https://cdn.discordapp.com/attachments/436366084954783754/517927344531308565/tirsod.png');
+    background-image: url('ast/tirsod.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: 79% 140%;
@@ -26,9 +40,9 @@ div.option:hover {
 }
 </style>
 <div class = "hell">
-<div class = "option"> games  </div>
-<div class = "option"> software </div> 
-<div class = "option"> bgm </div>  
-<div class = "option"> art </div> 
+<div class = "option">  <a href = "notfound/index.html"> games  </a> </div>
+<div class = "option"> <a href = "notfound/index.html">software </a></div> 
+<div class = "option"> <a href = "notfound/index.html">bgm </a></div>  
+<div class = "option"> <a href = "notfound/index.html">art </a></div> 
 </div>
 </html>
