--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@ div.option:hover {
 }
 </style>
 <div class = "hell">
-<div class = "option">  <a href = "notfound/index.html"> games  </a> </div>
-<div class = "option"> <a href = "notfound/index.html">software </a></div> 
-<div class = "option"> <a href = "notfound/index.html">bgm </a></div>  
-<div class = "option"> <a href = "notfound/index.html">art </a></div> 
+<div class = "option">  <a href = "games"> games  </a> </div>
+<div class = "option"> <a href = "software">software </a></div> 
+<div class = "option"> <a href = "bgm">bgm </a></div>  
+<div class = "option"> <a href = "art">art </a></div> 
 </div>
 </html>
