--- a/toucan/index.html
+++ b/toucan/index.html
@@ -15,11 +15,10 @@
 
 <h3>May the mighty toucan bless your day!</h3>
 <h2>Thank you for visiting us!</h2>
-Send us your love emails to fans@toucanlove.com
+Send us your love letters to fans@toucanlove.com<br>
+Encode them here!<br>
+<iframe width = "640" src="http://www.ilikebreadtoomuch.tk/toucan"></iframe>
 
-
-<br>
-<br>
 <br>
 <br>
 <br>
@@ -35,4 +34,7 @@ Send us your love emails to fans@toucanlove.com
 <br>
 <br>
 tirsod made this abomination of a website, be sure to thank him
+<br>
+toucan binary converter courtesy of bread<br>
+
 </html>
