fixed that actually lmao

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ div.option:hover {
 <div class = "hell">
 <div class = "option">  <a href = "games"> games  </a> </div>
 <div class = "option"> <a href = "software">software </a></div> 
-<div class = "option"> <a href = "bgm.html">bgm </a></div>  
+<div class = "option"> <a href = "bgm/index.html">bgm </a></div>  
 <div class = "option"> <a href = "art">art </a></div> 
 </div>
 </html>
