--- a/bgm/index.html
+++ b/bgm/index.html
@@ -66,7 +66,7 @@ a:active {
 
 <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
 
-<body bgcolor = "#000000" background = "ast/bga.png">
+<body bgcolor = "#000000" background = "../ast/bga.png">
 <font face = "Segoe UI" color = "#FFFFFF">
 
 <left>
@@ -77,7 +77,7 @@ a:active {
 
 </div> <div class="i2">
 
-	<img src="./ast/scpfp.png" width="32" height="32""> 
+	<img src="../ast/scpfp.png" width="32" height="32""> 
 	<a href="http://soundcloud.com/tirsod">Soundcloud</a>
 	<br>
 	Recent, uncompiled releases
