added locosoccer soundtrack

--- a/bgm.html
+++ b/bgm.html
@@ -30,6 +30,11 @@ div.i4{
 	animation-name: fadein;
 	animation-duration:1s;
 }
+div.i5{
+	position: relative;
+	animation-name: fadein;
+	animation-duration:1.2s;
+}
 
 a:link {
   color: #ff3399;
@@ -92,6 +97,15 @@ a:active {
 	Antifector Soundtrack
 
 </div> <div class="i4">
+
+	<br><br>
+
+	<img src="https://f4.bcbits.com/img/a3379684831_16.jpg" width="32" height="32""> 
+	<a href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack (2015)</a>
+	<br>
+	LocoSoccer Soundtrack
+
+</div> <div class="i5">
 
 	<br> <br>
 
