--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@ a {
 div.hell{
     position: absolute;
     bottom: 5%;
-    left: 58%;
+    right: 60%;
 }
 body {
     background-image: url('ast/tirsod.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: 79% 140%;
+    background-position: 79% 100%;
 }
 div.option {
     width: 100px;
@@ -40,7 +40,7 @@ div.option:hover {
 }
 </style>
 <div class = "hell">
-<div class = "option">  <a href = "games"> games  </a> </div>
+<div class = "option">  <a href = "games"> games  </a></div>
 <div class = "option"> <a href = "software">software </a></div> 
 <div class = "option"> <a href = "bgm.html">bgm </a></div>  
 <div class = "option"> <a href = "art">art </a></div> 
