--- a/bgm.html
+++ b/bgm.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+
+	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
+
 </head>
 
 <style>
