--- a/bgm.html
+++ b/bgm.html
@@ -7,6 +7,12 @@
 	0% { opacity:0; left:-32px; }
 	100% { opacity:1; left:0px; }
 }
+
+body {
+    background:url(ast/bga.png) center #000;
+    background-size:cover;
+}
+
 div.i1{
 	position: relative;
 	animation-name: fadein;
@@ -67,8 +73,6 @@ a:active {
 </head>
 
 <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
-
-<body bgcolor = "#000000" background = "ast/bga.png">
 <font face = "Segoe UI" color = "#FFFFFF">
 
 <left>
