--- a/bgm.html
+++ b/bgm.html
@@ -9,8 +9,9 @@
 }
 
 body {
-    background:url(ast/bga.png) center #000;
+    background:url(ast/bga.png) center #1b1b1b;
     background-size:cover;
+	background-repeat:no-repeat;
 }
 
 div.i1{
