--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-
+	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
     <title>. . .</title>
     <meta name="description" content="tirsod's special hell">
     <meta name="author" content="tirsod & lilybeevee">
