changing from transparent to opaque

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ div.hell{
     right: 60%;
 }
 body {
-    background-image: url('ast/tirsod.png');
+    background-image: url('ast/bgb.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: 80% 100%;
+    background-position: center bottom;
 }
 div.option {
     width: 100px;
