--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-	<meta name="viewport" content="maximum-scale=1.0,width=device-width,height=device-height,initial-scale=1.0,user-scalable=0">
+	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
     <title>. . .</title>
     <meta name="description" content="tirsod's special hell">
     <meta name="author" content="tirsod & lilybeevee">
@@ -27,7 +27,7 @@ body {
     background-image: url('ast/tirsod.png');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-position: bottom right;
+    background-position: 78% 100%;
 }
 div.option {
     width: 100px;
