--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ div.hell{
 body {
     background-image: url('ast/tirsod.png');
     background-repeat: no-repeat;
+	background-size: cover
     background-attachment: fixed;
-    background-position: 78% 100%;
+    background-position: 70% -30%;
 }
 div.option {
     width: 100px;
