Added games page, relevant assets, and created a style.css

--- a/bgm.html
+++ b/bgm.html
@@ -1,118 +1,68 @@
 <!DOCTYPE html>
 <html>
 
-<style>
-
-@keyframes fadein{
-	0% { opacity:0; left:-32px; }
-	100% { opacity:1; left:0px; }
-}
-
-body {
-    background:url(ast/bga.png) center #1b1b1b;
-    background-size:cover;
-	background-repeat:no-repeat;
-}
-
-div.i1{
-	position: relative;
-	animation-name: fadein;
-	animation-duration:0.4s;
-}
-div.i2{
-	position: relative;
-	animation-name: fadein;
-	animation-duration:0.6s;
-}
-div.i3{
-	position: relative;
-	animation-name: fadein;
-	animation-duration:0.8s;
-}
-div.i4{
-	position: relative;
-	animation-name: fadein;
-	animation-duration:1s;
-}
-div.i5{
-	position: relative;
-	animation-name: fadein;
-	animation-duration:1.2s;
-}
-
-a:link {
-  color: #ff3399;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:visited {
-  color: #ff3399;
-  background-color: transparent;
-  text-decoration: none;
-}
-
-a:hover {
-  color: red;
-  background-color: transparent;
-  text-decoration: underline;
-}
-
-a:active {
-  color: yellow;
-  background-color: transparent;
-  text-decoration: underline;
-}
-</style> 
-
 <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
+	<LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
     <title>tirsod/bgm</title>
     <meta name="description" content="bgm">
     <meta name="author" content="tirsod">
 </head>
+
+<style type="text/css">
+	@import ("ast/style.css");
+	body {
+		background:url(ast/bga.png) #1b1b1b;
+		background-position: 50% 0%;
+		background-size:cover;
+		background-repeat:no-repeat;
+	}
+
+</style> 
+
+
 
 <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
 <font face = "Segoe UI" color = "#FFFFFF">
 
 <left>
 
-<div class="i1">
+<div class="slide1">
 
-	<h1> tirsod/bgm . . . </h1>
+	<h1> <a class="white" href="index.html"> tirsod/bgm . . . </a> </h1>
 
-</div> <div class="i2">
+</div> <div class="slide2">
 
 	<img src="ast/scpfp.png" width="32" height="32""> 
-	<a href="http://soundcloud.com/tirsod">Soundcloud</a>
+	<a class="pink" href="http://soundcloud.com/tirsod">Soundcloud</a>
 	<br>
 	Recent, uncompiled releases
 
-</div> <div class="i3">
+</div> <div class="slide3">
 
 	<br><br>
 
 	<img src="https://f4.bcbits.com/img/a0936635054_16.jpg" width="32" height="32""> 
-	<a href="http://tirsod.bandcamp.com/album/sentient-data">Sentient Data (2017)</a>
+	<a class="pink" href="http://tirsod.bandcamp.com/album/sentient-data">Sentient Data (2017)</a>
 	<br>
 	Antifector Soundtrack
 
-</div> <div class="i4">
+</div> <div class="slide4">
 
 	<br><br>
 
 	<img src="https://f4.bcbits.com/img/a3379684831_16.jpg" width="32" height="32""> 
-	<a href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack (2015)</a>
+	<a class="pink" href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack (2015)</a>
 	<br>
 	LocoSoccer Soundtrack
 
-</div> <div class="i5">
+</div> <div class="slide5">
 
 	<br> <br>
 
 	<img src="https://f4.bcbits.com/img/a1557611032_16.jpg" width="32" height="32""> 
-	<a href="http://tirsod.bandcamp.com/album/8x">8X (2014)</a>
+	<a class="pink" href="http://tirsod.bandcamp.com/album/8x">8X (2014)</a>
 	<br>
 	First musical personal project
 
