--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ div.hell{
     bottom: 5%;
     right: 60%;
 }
+
 body {
     background-image: url('ast/tirsod.png');
     background-repeat: no-repeat;
@@ -30,6 +31,7 @@ body {
     background-attachment: fixed;
     background-position: 75% -28%;
 }
+
 div.option {
     width: 100px;
     text-indent: 0px;
@@ -41,7 +43,7 @@ div.option:hover {
 }
 </style>
 <div class = "hell">
-<div class = "option">  <a href = "games"> games  </a></div>
+<div class = "option">  <a href = "games.html"> games  </a></div>
 <div class = "option"> <a href = "software">software </a></div> 
 <div class = "option"> <a href = "bgm.html">bgm </a></div>  
 <div class = "option"> <a href = "art">art </a></div> 
