optimized for mobile

--- a/games.html
+++ b/games.html
@@ -32,17 +32,21 @@ body {
 
 </div> <br> <br>
 
-	<div id="containerleft" class="float1">
+	<div id="gamecontainer" class="float1">
 
-		<a href="https://store.steampowered.com/app/635010/ANTIFECTOR/"> <img src="ast/banner/af.png"> </a>
+		<a href="https://store.steampowered.com/app/635010/ANTIFECTOR/">
+				<img src="ast/banner/af.png" width="256" height="105">
+		</a>
 		<br>
 		Arcade first person shooter<br>
 		<i> Lead design, Code, Art, Sound, Music. </i>
 	</div>
 	
-	<div id="containerright" class="float1">
+	<div id="gamecontainer" class="float1">
 
-		<a href="https://store.steampowered.com/app/396360/LocoSoccer/"> <img src="ast/banner/ls.png"> </a>
+		<a href="https://store.steampowered.com/app/396360/LocoSoccer/">
+				<img src="ast/banner/ls.png" width="256" height="105">
+		</a>
 		<br>
 		Physics based 2D soccer game <br>
 		<i> Art, Sound, Music. </i>
