--- a/bgm/index.html
+++ b/bgm/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
-	<LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
+	<LINK rel="stylesheet" type="text/css" media="screen" href="../ast/style.css">
     <title>tirsod/bgm</title>
     <meta name="description" content="bgm">
     <meta name="author" content="tirsod">
 </head>
 
 <style type="text/css">
-	@import ("ast/style.css");
+	@import ("../ast/style.css");
 	body {
-		background:url(ast/bga.png) #1b1b1b;
+		background:url(../ast/bga.png) #1b1b1b;
 		background-position: 50% 0%;
 		background-size:cover;
 		background-repeat:no-repeat;
@@ -30,11 +30,11 @@
 
 <div class="slide1">
 
-	<h1> <a class="white" href="index.html"> tirsod/bgm . . . </a> </h1>
+	<h1> <a class="white" href="../index.html"> tirsod/bgm . . . </a> </h1>
 
 </div> <div class="slide2">
 
-	<img src="ast/scpfp.png" width="32" height="32""> 
+	<img src="../ast/scpfp.png" width="32" height="32""> 
 	<a class="pink" href="http://soundcloud.com/tirsod">Soundcloud</a>
 	<br>
 	Recent, uncompiled releases
