--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ div.option:hover {
 }
 </style>
 <div class = "hell">
-<div class = "option">  <a href = "games.html"> games  </a></div>
+<div class = "option"> <a href = "games"> games </a></div>
 <div class = "option"> <a href = "software">software </a></div> 
-<div class = "option"> <a href = "bgm.html">bgm </a></div>  
+<div class = "option"> <a href = "bgm">bgm </a></div>  
 <div class = "option"> <a href = "art">art </a></div> 
 </div>
 </html>
