directed "home" to ../

--- a/bgm/index.html
+++ b/bgm/index.html
@@ -30,7 +30,7 @@
 
 <div class="slide1">
 
-	<h1> <a class="white" href="../index.html"> tirsod/bgm . . . </a> </h1>
+	<h1> <a class="white" href="../"> tirsod/bgm . . . </a> </h1>
 
 </div> <div class="slide2">
 
