--- a/games/index.html
+++ b/games/index.html
@@ -28,7 +28,7 @@ body {
 
 <div class="floatheader">
 
-	<h1> <a class="white" href="../index.html"> tirsod/games . . . </a> </h1>
+	<h1> <a class="white" href="../"> tirsod/games . . . </a> </h1>
 
 </div> <br> <br>
 
