--- a/games/index.html
+++ b/games/index.html
@@ -44,7 +44,7 @@ body {
 		-->
 		
 		<a href="https://store.steampowered.com/app/635010/ANTIFECTOR/">
-				<img src="../ast/banner/af.png" width="256" height="105">
+				<img src="../ast/banner/af.png" width="256" height="105" alt="ANTIFECTOR">
 		</a>
 		<br>
 		Arcade first person shooter<br>
@@ -54,7 +54,7 @@ body {
 	<div id="gamecontainer" class="float1">
 
 		<a href="https://store.steampowered.com/app/396360/LocoSoccer/">
-				<img src="../ast/banner/ls.png" width="256" height="105">
+				<img src="../ast/banner/ls.png" width="256" height="105" alt="LocoSoccer">
 		</a>
 		<br>
 		Physics based 2D soccer game <br>
@@ -66,7 +66,7 @@ body {
 <br> <br> 
 
 <div class="floatheader">
-	<h1>  Web Games </h1>
+	<h1> Web Games </h1>
 </div>
 
 <br> <br>
@@ -75,30 +75,30 @@ body {
 
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/649228">
-			<img src="../ast/banner/aod.jpg">
+			<img src="../ast/banner/aod.jpg" alt="Afraid Of Dark">
 		</a>
 		<br>Horror
 	</div>
 	
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/673283">
-			<img src="../ast/banner/afraid.png">
+			<img src="../ast/banner/afraid.png" alt="Afraid">
 		</a>
 		<br>Horror
 	</div>
 	
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/683204">
-			<img src="../ast/banner/kcd.png">
+			<img src="../ast/banner/kcd.png" alt="KeyCountDown">
 		</a>
 		<br>Arcade
 	</div>
 	
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/692091">
-			<img src="../ast/banner/bpulse.png">
+			<img src="../ast/banner/bpulse.png" alt="B-Pulse">
 		</a>
-		<br>Puzzle
+		<br>Puzzle <i><a href="https://tirsod.itch.io/bpulse" class="pink">(Standalone Download)<a/></i>
 	</div>
 
 </div>
