an attempt was made

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@ div.option:hover {
 }
 </style>
 <div class = "hell">
-<div class = "option"> <a href = "games"> games </a></div>
-<div class = "option"> <a href = "software">software </a></div> 
-<div class = "option"> <a href = "bgm">bgm </a></div>  
-<div class = "option"> <a href = "art">art </a></div> 
+<a href = "games"> <div class = "option">games </div></a>
+<a href = "software"> <div class = "option">software </div></a>
+<a href = "bgm"> <div class = "option">bgm </div></a>
+<a href = "art"> <div class = "option">art </div></a>
 </div>
 </html>
