oops i forgot a reference

--- a/bgm/index.html
+++ b/bgm/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
 	<LINK rel="stylesheet" type="text/css" media="screen" href="../ast/style.css">
     <title>tirsod/bgm</title>
-    <meta name="description" content="bgm">
+    <meta name="description" content="Albums and soundtracks by tirsod.">
     <meta name="author" content="tirsod">
 </head>
 
@@ -23,7 +23,7 @@
 
 
 
-<link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
+<link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
 <font face = "Segoe UI" color = "#FFFFFF">
 
 <left>
