--- a/games/index.html
+++ b/games/index.html
@@ -17,7 +17,7 @@ body {
 	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
 	<LINK rel="stylesheet" type="text/css" media="screen" href="../ast/style.css">
     <title>tirsod/games</title>
-    <meta name="description" content="games">
+    <meta name="description" content="A compilation of released and work-in-progress games.">
     <meta name="author" content="tirsod">
 </head>
 
