--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
     <title>. . .</title>
-    <meta name="description" content="tirsod's special hell">
+    <meta name="description" content="Homepage | Art, Sound, Code.">
     <meta name="author" content="tirsod & lilybeevee">
 </head>
 
