which one is it?

--- a/notfound/index.html
+++ b/notfound/index.html
@@ -5,7 +5,7 @@
 
     <title>404</title>
     <meta name="description" content="Whatever you were looking for, it's not here.">
-    <meta name="author" content="Nobody">
+    <meta name="author" content="tirsod">
 </head>
 
 <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
