--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-
+	<LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
     <title>404</title>
     <meta name="description" content="Whatever you were looking for, it's not here.">
     <meta name="author" content="Nobody">
@@ -10,10 +10,10 @@
 
 <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
 
-<body bgcolor = "#000000" background = "../ast/tirsod.png">
+<body bgcolor = "#000000" background = "ast/tirsod.png">
 <center>
 
-<h1> Not Found. </h1>
+<h1> <a href="/index.html" class="white"> Not Found. </a> </h1>
 
 
 </html>
