--- a/404.html
+++ b/404.html
@@ -5,15 +5,15 @@
 	<LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
     <title>404</title>
     <meta name="description" content="Whatever you were looking for, it's not here.">
-    <meta name="author" content="Nobody">
+    <meta name="author" content="Noone">
 </head>
 
-<link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
+<link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
 
-<body bgcolor = "#000000" background = "ast/tirsod.png">
+<body bgcolor = "#000000" background = "../ast/tirsod.png">
 <center>
 
-<h1> <a href="/index.html" class="white"> Not Found. </a> </h1>
+<h1> <a href="../index.html" class="white"> Not Found. </a> </h1>
 
 
 </html>
