--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
 <body bgcolor = "#000000" background = "../ast/tirsod.png">
 <center>
 
-<h1> <a href="../index.html" class="white"> Not Found. </a> </h1>
+<h1> <a href="../" class="white"> Not Found. </a> </h1>
 
 
 </html>
