--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
 <link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
 
 <body bgcolor = "#000000" background = "../ast/tirsod.png">
+<!-- this website will not find the assets when run locally unless emulating a server-->
 <center>
 
 <h1> <a href="../" class="white"> Not Found. </a> </h1>
