revised for clarity

--- a/+/index.html
+++ b/+/index.html
@@ -54,10 +54,10 @@ body {
 </div>
 <br>
 <div class="float1" style="animation-delay:5s; opacity:0; padding:16px;">
-	I develop software and games as a hobby,<br>
-	of which I've already published two on Steam.<br>
+	As a developer at Startreming, I've released two games:<br>
+	LocoSoccer and ANTIFECTOR.<br>
 	<br>
-	I love photography, editing, and occasionally draw stuff for fun.<br>
+	I love photography and music. I draw stuff for fun.<br>
 </div>
 <br>
 <div class="float1" style="animation-delay:7s; opacity:0; padding:16px;">
