streamlined style, specified delays

--- a/games/index.html
+++ b/games/index.html
@@ -17,20 +17,22 @@ body {
     background-size: cover;
 	background-repeat:no-repeat;
 }
+div{
+	opacity:0;
+}
 </style> 
 
 <link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
 
-
 <center>
 
-<div class="floatheader">
+<div class="floatheader" style="animation-delay:0.2s">
 
 	<h1> <a class="white" href="../"> tirsod/games . . . </a> </h1>
 
 </div> <br> <br>
 
-<div id="collection">
+<div id="collection" class="float1" style="animation-delay:0.4s; background:#0000;">
 	<div id="gamecontainer" class="float1">
 
 		<!--
@@ -61,15 +63,15 @@ body {
 	</div>
 </div>
 
-<br> <br> 
+<br>
 
-<div class="floatheader">
+<div class="floatheader" style="animation-delay:0.6s">
 	<h1> Web Games </h1>
 </div>
 
-<br> <br>
+<br><br>
 
-<div id="collection">
+<div id="collection" class="float1" style="animation-delay:0.8s; background:#0000;">
 
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/649228">
