--- a/bgm/index.html
+++ b/bgm/index.html
@@ -16,6 +16,11 @@
 		background-position: 50% 0%;
 		background-size:cover;
 		background-repeat:no-repeat;
+		margin: 0px;
+	}
+	div{
+		padding: 6px 8px;
+		opacity:0;
 	}
 </style> 
 
@@ -23,38 +28,42 @@
 
 <left>
 
-<div class="slide1">
+<div class="slide1" style="animation-delay:0s; padding: 0px 8px;">
 
 	<h1> <a class="white" href="../"> tirsod/bgm . . . </a> </h1>
 
-</div> <div class="slide2">
+</div> <div class="slide1" style="animation-delay:0.2s;">
 
 	<img src="../ast/scpfp.png" width="32" height="32""> 
 	<a class="pink" href="http://soundcloud.com/tirsod">Soundcloud</a>
 	<br>
 	Recent, uncompiled releases
 
-</div> <div class="slide3">
-
-	<br><br>
+</div>
+<br><br>
+<div class="slide1" style="animation-delay:0.4s;">
 
 	<img src="https://f4.bcbits.com/img/a0936635054_16.jpg" width="32" height="32""> 
 	<a class="pink" href="http://tirsod.bandcamp.com/album/sentient-data">Sentient Data (2017)</a>
 	<br>
 	Antifector Soundtrack
 
-</div> <div class="slide4">
+</div>
 
-	<br><br>
+<br><br>
+
+<div class="slide1" style="animation-delay:0.6s;">
 
 	<img src="https://f4.bcbits.com/img/a3379684831_16.jpg" width="32" height="32""> 
 	<a class="pink" href="http://tirsod.bandcamp.com/album/locosoccer-soundtrack">LocoSoccer Soundtrack (2015)</a>
 	<br>
 	LocoSoccer Soundtrack
 
-</div> <div class="slide5">
+</div>
 
-	<br> <br>
+<br> <br>
+
+<div class="slide1" style="animation-delay:0.8s;">
 
 	<img src="https://f4.bcbits.com/img/a1557611032_16.jpg" width="32" height="32""> 
 	<a class="pink" href="http://tirsod.bandcamp.com/album/8x">8X (2014)</a>
