--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@ div.option:hover {
 </style>
 <img src="ast/tirsod.png" class="tir">
 <div class = "hell">
-<a href = "games"> <div class = "option">games </div></a>
-<a href = "bgm"> <div class = "option">bgm </div></a>
-<a href = "art"> <div class = "option">art </div></a>
-<a href = "+"> <div class = "option">more </div></a>
+<a href = "games/"> <div class = "option">games </div></a>
+<a href = "bgm/"> <div class = "option">bgm </div></a>
+<a href = "art/"> <div class = "option">art </div></a>
+<a href = "+/"> <div class = "option">more </div></a>
 </div>
 </html>
