added startreming link

--- a/+/index.html
+++ b/+/index.html
@@ -54,7 +54,7 @@ body {
 </div>
 <br>
 <div class="float1" style="animation-delay:5s; opacity:0; padding:16px;">
-	As a developer at Startreming, I've released two games:<br>
+	As a developer at <a href="http://startreming.com" class="white">Startreming</a>, I've released two games:<br>
 	LocoSoccer and ANTIFECTOR.<br>
 	<br>
 	I love photography and music. I draw stuff for fun.<br>
