--- a/games/index.html
+++ b/games/index.html
@@ -12,9 +12,9 @@
 
 <style>
 body {
-    background:url(../ast/af.png) #000;
-	background-position: 50% 30%;
-    background-size: cover;
+    background:url(../ast/wr.png) #000;
+	background-position: 50% 0%;
+    background-size: 100% auto;
 	background-repeat:no-repeat;
 }
 div{
@@ -30,7 +30,22 @@ div{
 
 	<h1> <a class="white" href="../"> tirsod/games . . . </a> </h1>
 
-</div> <br> <br>
+</div>
+
+<div id="collection" class="float1" style="animation-delay:0.2s; background:#0000; padding-top:256px; padding-bottom:256px">
+	<div id="gamecontainer" class="float1" style="float:none; width:100%; background:#0000">
+		<img src="../ast/wrl.png" width="256" height="105" alt="WAVERIDER"> <br><br><br>
+		Abstract Arcade Racing Game.<br>
+		A race to the end of the galaxy.<br><br>
+		<i> Coming Soon.</i>
+	</div>
+</div>
+
+<div class="floatheader" style="animation-delay:0.6s">
+	<h1> Releases </h1>
+</div>
+
+	<br><br>
 
 <div id="collection" class="float1" style="animation-delay:0.4s; background:#0000;">
 	<div id="gamecontainer" class="float1">
