--- a/games/index.html
+++ b/games/index.html
@@ -14,7 +14,7 @@
 body {
     background:url(../ast/wr.png) #000;
 	background-position: 50% 0%;
-    background-size: 100% auto;
+    background-size: auto;
 	background-repeat:no-repeat;
 }
 div{
