haha new logo new text

--- a/games/index.html
+++ b/games/index.html
@@ -20,7 +20,7 @@ body {
 div{
 	opacity:0;
 }
-</style> 
+</style>
 
 <link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
 
@@ -32,12 +32,18 @@ div{
 
 </div>
 
-<div id="collection" class="float1" style="animation-delay:0.2s; background:#0000; padding-top:256px; padding-bottom:256px">
+<div id="collection" class="float1" style="animation-delay:0.2s; background:#0000; padding-top:64px; padding-bottom:64px">
 	<div id="gamecontainer" class="float1" style="float:none; width:100%; background:#0000">
-		<img src="../ast/wrl.png" width="256" height="105" alt="WAVERIDER"> <br><br><br>
+
+    <a href="https://store.steampowered.com/app/1316310/WAVE_RIDER" alt="WAVE RIDER Logo"><img src="../ast/wrl.png" width="256" height="105" alt="WAVERIDER"></a>
+    <br>
+    <br>
+    <br>
+
 		Abstract Arcade Racing Game.<br>
-		A race to the end of the galaxy.<br><br>
-		<i> Coming Soon.</i>
+		A race to the end of the world.<br>
+    <br>
+		<i> <a href="https://store.steampowered.com/app/1316310/WAVE_RIDER" class="pink">Check us out on Steam</a></i>
 	</div>
 </div>
 
@@ -54,10 +60,10 @@ div{
 		<div id="bgvideo">
 			<video autoplay loop>
               <source src="https://startreming.com/img/antifector.mp4" type="video/mp4" muted>
-            </video> 
+            </video>
 		</div>
 		-->
-		
+
 		<a href="https://store.steampowered.com/app/635010/ANTIFECTOR/">
 				<img src="../ast/banner/af.png" width="256" height="105" alt="ANTIFECTOR">
 		</a>
@@ -65,7 +71,7 @@ div{
 		Arcade first person shooter<br>
 		<i> Lead design, Code, Art, Sound, Music. </i>
 	</div>
-	
+
 	<div id="gamecontainer" class="float1">
 
 		<a href="https://store.steampowered.com/app/396360/LocoSoccer/">
@@ -74,7 +80,7 @@ div{
 		<br>
 		Physics based 2D soccer game <br>
 		<i> Art, Sound, Music. </i>
-		
+
 	</div>
 </div>
 
@@ -94,21 +100,21 @@ div{
 		</a>
 		<br>Horror
 	</div>
-	
+
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/673283">
 			<img src="../ast/banner/afraid.png" alt="Afraid">
 		</a>
 		<br>Horror
 	</div>
-	
+
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/683204">
 			<img src="../ast/banner/kcd.png" alt="KeyCountDown">
 		</a>
 		<br>Arcade
 	</div>
-	
+
 	<div id="quartercontainer" class="float1">
 		<a href="https://www.newgrounds.com/portal/view/692091">
 			<img src="../ast/banner/bpulse.png" alt="B-Pulse">
