--- a/index.html
+++ b/index.html
@@ -7,59 +7,78 @@
     <title>. . .</title>
     <meta name="description" content="Homepage | Art, Sound, Code.">
     <meta name="author" content="tirsod & lilybeevee">
+    <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
+    <script type='text/javascript' src='ast/tv.js'></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 
-<link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
-
-<left>
+<body>
 <style>
-a {
-    color: white;
-    text-decoration: none;
-}
-div.hell{
-    position: absolute;
-    bottom: 5%;
-    left: 50%;
-}
-body {
-	background: #700000;
-}
-.tir {
-	position: fixed;
-	height: 80%;
-	bottom: 0%;
-	left: 60%;
-}
-div.option {
-    width: 100px;
-    text-indent: 0px;
-	transition: background 0.2s, text-indent 0.1s;
-}
-div.option:hover {
-	background: #000000;
-	text-indent: 8px;
-}
-@media only screen and (max-width: 500px) {
-	.tir{
-		left: 45%;
-	}
-	div.hell{
-		left: 6px;
-		bottom:10%
-	}
-	div.option{
-		width: 132px;
-		height: 32px;
-		font-size: 20pt;
-	}
-}
+  a {
+      color: white;
+      text-decoration: none;
+  }
+
+  body {
+    font-family: courier, "Lucida Console", sans-serif;
+    font-size: 16pt;
+  	background: url("ast/staticbg.gif");
+    background-repeat: repeat;
+  }
+  .tir {
+  	position: fixed;
+  	height: 80%;
+  	bottom: 0%;
+  	left: 60%;
+  }
+  div.option {
+      width: 100px;
+      text-indent: 0px;
+  	transition: background 0.2s, text-indent 0.1s;
+  }
+  div.option:hover {
+  	background: #000000;
+  	text-indent: 8px;
+  }
+  @media only screen and (max-width: 600px) {
+  	.tir{
+  		left: 45%;
+  	}
+  	div.hell{
+  		left: 6px;
+  		bottom:10%
+  	}
+  	div.option{
+  		width: 132px;
+  		height: 32px;
+  		font-size: 20pt;
+  	}
+  }
 </style>
-<img src="ast/tirsod.png" class="tir">
-<div class = "hell">
-<a href = "games/"> <div class = "option">games </div></a>
-<a href = "bgm/"> <div class = "option">bgm </div></a>
-<a href = "art/"> <div class = "option">art </div></a>
-<a href = "+/"> <div class = "option">more </div></a>
+
+<div class="tvscreen">
+  <p id="welcome"></p>
 </div>
+<div class="tvscreen">
+  <iframe id="youtube_video" src="https://www.youtube.com/embed/M28sOJhrmF8" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<div class = "tvselector">
+  <a href = "games/">
+    <div class = "floattv">
+      games
+    </div>
+  </a>
+  <a href = "bgm/">
+    <div class = "floattv">
+      music
+    </div>
+  </a>
+  <a href = "art/">
+    <div class = "floattv">
+      art
+    </div>
+  </a>
+</div>
+</body>
 </html>
