--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
   }
 
   body {
+    margin: 0px;
+    padding: 0px;
     font-family: courier, "Lucida Console", sans-serif;
     font-size: 16pt;
-  	background: url("ast/staticbg.gif");
+  	background: url("ast/staticbg3.gif");
+    background-size: cover;
     background-repeat: repeat;
   }
   .tir {
@@ -34,12 +37,14 @@
   div.option {
       width: 100px;
       text-indent: 0px;
-  	transition: background 0.2s, text-indent 0.1s;
+  	  transition: background 0.2s, text-indent 0.1s;
   }
   div.option:hover {
   	background: #000000;
   	text-indent: 8px;
   }
+
+
   @media only screen and (max-width: 600px) {
   	.tir{
   		left: 45%;
@@ -55,6 +60,8 @@
   	}
   }
 </style>
+
+<div class="noisebg"></div>
 
 <div class="tvscreen">
   <p id="welcome"></p>
