--- a/index.html
+++ b/index.html
@@ -43,27 +43,11 @@
   	background: #000000;
   	text-indent: 8px;
   }
-
-
-  @media only screen and (max-width: 600px) {
-  	.tir{
-  		left: 45%;
-  	}
-  	div.hell{
-  		left: 6px;
-  		bottom:10%
-  	}
-  	div.option{
-  		width: 132px;
-  		height: 32px;
-  		font-size: 20pt;
-  	}
-  }
 </style>
 
 <div class="noisebg"></div>
 
-<div class="tvscreen">
+<div class="tvscreen" id="tvscreenwelcome">
   <p id="welcome"></p>
 </div>
 <div class="tvscreen">
