Animations, good practices

--- a/index.html
+++ b/index.html
@@ -48,28 +48,41 @@
 <div class="noisebg"></div>
 
 <div class="tvscreen" id="tvscreenwelcome">
-  <p id="welcome"></p>
-</div>
-<div class="tvscreen">
-  <iframe id="youtube_video" src="https://www.youtube.com/embed/M28sOJhrmF8" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+  <p id="welcome">(...)</p>
 </div>
 
-<div class = "tvselector">
-  <a href = "games/">
-    <div class = "floattv">
-      games
-    </div>
-  </a>
-  <a href = "bgm/">
-    <div class = "floattv">
-      music
-    </div>
-  </a>
-  <a href = "art/">
-    <div class = "floattv">
-      art
-    </div>
-  </a>
+<div id="youtubevideosection">
+  <div class="tvscreen">
+    <iframe id="youtube_video" src="https://www.youtube.com/embed/M28sOJhrmF8" width="600" height="340" frameborder="0" allowfullscreen></iframe>
+  </div>
 </div>
+
+<div class="tvselector">
+
+    <div>
+      <a href = "games/">
+        <div class = "floattv">
+          games
+        </div>
+      </a>
+    </div>
+
+    <div>
+      <a href = "bgm/">
+        <div class = "floattv">
+          music
+        </div>
+      </a>
+    </div>
+
+    <div>
+      <a href = "art/">
+        <div class = "floattv">
+          art
+        </div>
+      </a>
+    </div>
+</div>
+
 </body>
 </html>
