--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </div>
 
     <div>
-      <a href = "art/">
+      <a href = "https://instagram.com/artirsod">
         <div class = "floattv">
           art
         </div>
