update antifector link

--- a/games/index.html
+++ b/games/index.html
@@ -64,11 +64,11 @@ div{
 		</div>
 		-->
 
-		<a href="https://store.steampowered.com/app/635010/ANTIFECTOR/">
+		<a href="https://startreming.itch.io/antifector">
 				<img src="../ast/banner/af.png" width="256" height="105" alt="ANTIFECTOR">
 		</a>
 		<br>
-		Arcade first person shooter<br>
+		Arcade Antivirus FPS<br>
 		<i> Lead design, Code, Art, Sound, Music. </i>
 	</div>
 
