--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div>
       <a href = "games/">
         <div class = "floattv">
-          hello group
+          games
         </div>
       </a>
     </div>
