--- a/store/login.html
+++ b/store/login.html
@@ -49,6 +49,7 @@
             <div class="container">
                 <form action="https://localhost:7242/Login" class="form" id="login_form">
                     <h1 class="form__title">Login</h1>
+                    <div id="loginalert" style="display:none">Couldn't sign in</div>
                     <div class="form__message form__message--error"></div>
                     <div class="form__input-group">
                         <input type="text" id="username" class="form__input" autofocus placeholder="Username">
@@ -65,7 +66,8 @@
                 </form>
                 <form class="form form--hidden" action="https://localhost:7242/Signup" id="signup_form">
                     <h1 class="form__title">Create Account</h1>
-                    <div class="form__message form__message--error"></div>
+                    <div id="signupalert"></div>
+                    <div id="signupsuccess" class="active"></div>
                     <div class="form__input-group">
                         <input type="text" id="newusername" class="form__input" autofocus placeholder="Username">
                         <div class="form__input-error-message"></div>
