mini change to the catwalk website

--- a/catwalk/index.html
+++ b/catwalk/index.html
@@ -47,9 +47,7 @@
     <p>send text
     <p>send images</p>
     <p>send stickers</p>
-    <br>
-    <a href="https://discord.com/oauth2/authorize?client_id=1119724749644382219&permissions=137439341632&scope=bot">Get it on your server!</a>
-    <br><br>
+    <h1><a href="https://discord.com/oauth2/authorize?client_id=1119724749644382219&permissions=137439341632&scope=bot">Get it on your server!</a></h1>
     <h1 style="color:#FFF">How to use it:</h1>
     <p>Having Manage Guild permissions, go into any channel on your server and do:</p>
     <br>
