--- a/catwalk/index.html
+++ b/catwalk/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
   <LINK rel="stylesheet" type="text/css" media="screen" href="../ast/style.css">
     <title>Catwalk bot!</title>
-  <meta name="description" content="Thoughts.">
+  <meta name="description" content="yo yo yo i made a fuckin discord bot that broadcasts your messages to other servers isnt that cool?">
   <meta name="author" content="tirsod">
   <link rel='icon' href='../ast/skull.ico' type='image/x-icon'/ >
 </head>
