--- a/worth/index.html
+++ b/worth/index.html
@@ -130,6 +130,8 @@ resultLabel.innerText = "\n\n";
 
 worthies = localStorage.getItem('worthies');
 attempts = localStorage.getItem('attempts');
+statsWorthy.value = Number(worthies);
+statsAttempts.value = Number(attempts);
 
 function WorthyClicked(){
 
