hacked together as it is, it works.

--- a/worth/index.html
+++ b/worth/index.html
@@ -132,6 +132,7 @@ worthies = localStorage.getItem('worthies');
 attempts = localStorage.getItem('attempts');
 statsWorthy.value = Number(worthies);
 statsAttempts.value = Number(attempts);
+PrintResult();
 
 function WorthyClicked(){
 
