--- a/worth/index.html
+++ b/worth/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
 	<LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
-    <title>. . .</title>
+    <title>Kyomi Worthiness Index Calculator (KWIC?)</title>
     <meta name="description" content="tirsod.com">
     <meta name="author" content="?">
     <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
