--- a/indexworking.html
+++ b/indexworking.html
@@ -5,8 +5,8 @@
 	<meta name="viewport" content="maximum-scale=1.0,width=device-width,initial-scale=1.0,user-scalable=0">
 	<LINK rel="stylesheet" type="text/css" media="screen" href="ast/style.css">
     <title>. . .</title>
-    <meta name="description" content="Homepage | Art, Sound, Code.">
-    <meta name="author" content="tirsod & lilybeevee">
+    <meta name="description" content="tirsod.com">
+    <meta name="author" content="?">
     <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
     <script type='text/javascript' src='ast/tv.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -24,7 +24,7 @@
     padding: 0px;
     font-family: courier, "Lucida Console", sans-serif;
     font-size: 16pt;
-  	background: url("ast/staticbg3.gif");
+  	background-color: #000000;
     background-size: cover;
     background-repeat: repeat;
   }
@@ -47,41 +47,14 @@
 
 <div class="noisebg"></div>
 
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
+
 <div class="tvscreen" id="tvscreenwelcome">
   <p id="welcome">(...)</p>
 </div>
 
-<div id="youtubevideosection">
-  <div class="tvscreen">
-    <iframe id="youtube_video" src="https://www.youtube.com/embed/F-xedRKs_Ok" width="600" height="340" frameborder="0" allowfullscreen></iframe>
-  </div>
-</div>
-
-<div class="tvselector">
-
-    <div>
-      <a href = "games/">
-        <div class = "floattv">
-          games
-        </div>
-      </a>
-    </div>
-
-    <div>
-      <a href = "bgm/">
-        <div class = "floattv">
-          music
-        </div>
-      </a>
-    </div>
-
-    <div>
-      <a href = "https://instagram.com/artirsod">
-        <div class = "floattv">
-          art
-        </div>
-      </a>
-    </div>
+<div class="tvscreen" id="tvscreenwelcome">
+  <p id="welcome2">(...)</p>
 </div>
 
 </body>
