--- a/index.html
+++ b/index.html
@@ -84,5 +84,15 @@
     </div>
 </div>
 
+<div class="tvselector">
+  <div>
+    <a href = "https://new.tirsod.com">
+      <div class = "floattv">
+        can you... take me to the new site instead?
+      </div>
+    </a>
+  </div>
+</div>
+
 </body>
 </html>
