--- a/mordio/index.html
+++ b/mordio/index.html
@@ -5,6 +5,8 @@
     
 
     <head>
+        <title>[!] Super_Mordio_Broooooo_(USA)_(TIR).nes</title>
+        <meta name="description" content="Play Super Mordio Broooooo on your browser for free!">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name ="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
