--- a/index-waverider.html
+++ b/index-waverider.html
@@ -24,7 +24,7 @@
     padding: 0px;
     font-family: courier, "Lucida Console", sans-serif;
     font-size: 16pt;
-  	background: url("ast/mordiobg.png");
+  	background: url("ast/staticbg3.gif");
     background-size: cover;
     background-repeat: repeat;
   }
@@ -45,21 +45,18 @@
   }
 </style>
 
+<div class="noisebg"></div>
 
 <div class="tvscreen" id="tvscreenwelcome">
   <p id="welcome">(...)</p>
 </div>
 
-<div id="tvselector" style="text-align: center;">
-  <div>
-    <a href="/mordio"><img src="ast/mordioaus.jpg" href="mordio"></a>
+<div id="youtubevideosection">
+  <div class="tvscreen">
+    <iframe id="youtube_video" src="https://www.youtube.com/embed/F-xedRKs_Ok" width="600" height="340" frameborder="0" allowfullscreen></iframe>
   </div>
-  Just released for the Nintendo Entertainment System,<br>
-  The #1 Action game in all of Kyomi!<br>
-  Click the banner to play NOW for FREE!
 </div>
 
-<br><br>
 <div class="tvselector">
 
     <div>
