--- a/mordio/index.html
+++ b/mordio/index.html
@@ -5,7 +5,7 @@
     
 
     <head>
-        <title>[!] Super_Mordio_Broooooo_(USA)_(TIR).nes</title>
+        <title>[!] Super_Mordio_Broooooo_(AUS)_(TIRSOD).nes</title>
         <meta name="description" content="Play Super Mordio Broooooo on your browser for free!">
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
