--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     padding: 0px;
     font-family: courier, "Lucida Console", sans-serif;
     font-size: 16pt;
-  	background: url("ast/mordiobg.png");
+  	background: url("ast/dlbg.png");
     background-size: cover;
     background-repeat: repeat;
   }
@@ -51,12 +51,12 @@
 </div>
 
 <div id="tvselector" style="text-align: center;">
+
   <div>
-    <a href="/mordio"><img src="ast/mordioaus.jpg" href="mordio"></a>
+    <a href="https://new.tirsod.com#inkstream"><img src="ast/questionmark.png" width="300px"></a>
   </div>
-  Just released for the Nintendo Entertainment System,<br>
-  The #1 Action game in all of Kyomi!<br>
-  Click the banner to play NOW for FREE!
+  <b><br>a new piece has revealed itself...<br>
+  inkstream #3 is here.</b>
 </div>
 
 <br><br>
@@ -91,7 +91,7 @@
   <div>
     <a href = "https://new.tirsod.com">
       <div class = "floattv">
-        can you... take me to the new site instead?
+        Click here to read the new article on Dream Layer tourism.
       </div>
     </a>
   </div>
